Header fixed and Sidebar is always visible now
Plus, scroll added to the sidebar it

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,9 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 0 15px;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
 }
 
 #btnTheme {
@@ -94,16 +97,16 @@ header {
 }
 
 #content {
-    flex: 1;
     display: flex;
+    margin-top: 104px;
+    overflow: overlay;
+    position: relative;
 }
 
 #sidebar {
-    position: relative;
     top: 0;
     left: 0;
     width: 310px;
-    margin-left: -310px;
     background-color: #ffffff;
     color: var(--mainLightThemeTextColor);
     transition: 0.3s;
@@ -111,7 +114,9 @@ header {
     margin-left: 14px;
     border: 3px solid var(--mainLightThemeDarkBlue);
     border-radius: 20px;
-    min-height: 95%;
+    max-height: 95%;
+    overflow: overlay;
+    position: sticky;
 }
 
 .section-title {
